Uninitalized variables in spatializer
During initialization, the spatialization audio filter, in revmodel.cpp, calls a number setXXX() methods. Those methods call update(). And update() uses a number of parameters some of which are not already set.
This is broken. In practice, this should be usually harmless. But with floating point, you never really know...