Spatializer: init variables correctly

Close #6514